--- a/estilos/gerandodiamantes.css
+++ b/estilos/gerandodiamantes.css
@@ -19,10 +19,14 @@ header {
 
 a {
   text-decoration: none;
-  color: white;
   padding: 15px;
   margin: 10px;
   border-radius: 5px;
+}
+
+.nav {
+  color: white;
+  margin-left: 30px;
 }
 
 .nav:hover {
@@ -36,6 +40,8 @@ a {
 }
 
 #bottomblack {
+  margin-left: 80px;
+  padding: 15px 30px;
   font-weight: bolder;
   background-color: black;
 }
@@ -55,13 +61,10 @@ main {
 }
 
 #bannertopo {
-  position: absolute;
-  width: 90vw;
-  height: 1200px;
-  background-image: url(../pasta.netuno/Assets_Netuno/bannertopo.png);
-  background-repeat: no-repeat;
+  width: 100vw;
+  height: 130vh;
+  background: url(../pasta.netuno/Assets_Netuno/bannertopo.png) no-repeat -250px -140px;
   background-size: cover;
-  background-position: -300px 0px;
 }
 
 #maeform {
@@ -70,10 +73,10 @@ main {
   justify-content: center;
   align-items: center;
   position: absolute;
-  left: 60%;
-  margin-top: 180px;
-  height: 850px;
-  width: 500px;
+  left: 65%;
+  margin-top: 90px;
+  height: 950px;
+  width: 550px;
   border-radius: 15px;
   border: 0.1px solid;
   border-image: linear-gradient(45deg, #ffffff79, #0077cc88, #ffffff79);
@@ -88,17 +91,19 @@ main {
 #cursuser {
   background-color: #1a7fbd;
   height: 215px;
+  color: white;
 }
 
 #botform {
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  color: #1a7fbd;
 }
 
 .form {
   background-color: rgb(255, 255, 255);
   width: 85%;
-  height: 240px;
+  height: 285px;
   padding: 20px;
 }
 
@@ -116,8 +121,47 @@ main {
 
 .form1 {
   width: 100%;
-  height: 40px;
+  height: 50px;
   margin: 5px;
   border-radius: 5px;
   border: 1px solid rgba(0, 0, 0, 0.233);
+}
+
+.form2 {
+  width: 20px;
+  height: 19px;
+  margin: 35px 10px 0px 20px;
+}
+
+.checkbot {
+  width: 20px;
+  height: 20px;
+  margin: 30px 10px;
+}
+
+.label_checkbot {
+  color: rgba(0, 0, 0, 0.329);
+  font-weight: bolder;
+}
+
+#fimform {
+  border-top: 1px solid rgba(0, 0, 0, 0.322);
+  text-align: center;
+  width: 100%;
+}
+
+#fimform p {
+  color: rgba(0, 0, 0, 0.411);
+  font-size: 0.7em;
+}
+
+#enviar {
+  margin-top: 20px;
+  color: white;
+  font-size: 1.2em;
+  background-color: #1a7fbd;
+  width: 100%;
+  height: 55px;
+  border-radius: 5px;
+  border-color: transparent;
 }
