--- a/estilos/OProjeto.css
+++ b/estilos/OProjeto.css
@@ -13,20 +13,20 @@
 }
 
 #img-oprojeto img {
-  width: 60vw;
+  margin-left: 100px;
+  width: 50vw;
   min-width: 650px;
 }
 
 #texto-oprojeto {
-  width: 35vw;
-  height: 100vh;
-  margin-right: 10px;
+  width: 25vw;
+  margin-right: 35px;
   color: white;
-  padding-left: 70px;
+  padding-left: 10px;
 }
 
 #texto-oprojeto h1 {
-  font-size: 70px;
+  font-size: 65px;
   color: rgba(255, 255, 255, 0.527);
   margin-top: 80px;
   min-width: 300px;
@@ -36,7 +36,6 @@
   display: block;
   font-size: 21px;
   margin-top: 30px;
-  width: 70%;
   min-width: 300px;
 }
 
