--- a/estilos/OProblema.css
+++ b/estilos/OProblema.css
@@ -6,13 +6,13 @@
 #oproblema {
   background: url(../Assets_Netuno/Container2.png) no-repeat 250px -50px;
   background-size: 700px;
-  background-color: white;
+  background-color: rgb(241, 241, 241);
   height: 130vh;
   width: 100vw;
 }
 
 #texto-oproblema {
-  background-color: white;
+  background-color: rgb(241, 241, 241);
   padding: 10px;
   width: 25vw;
   min-width: 350px;
@@ -59,24 +59,20 @@
   width: 80vw;
 }
 
-#container div {
-  position: relative;
-  text-align: center;
-  height: 200px;
-}
-
 .numero-inv {
-  color: rgba(0, 0, 0, 0.164);
-  margin-top: 20px;
-  font-size: 90px;
+  position: absolute;
+  left: 150px;
+  font-size: 100px;
+  color: rgba(0, 0, 0, 0.062);
 }
 
 .informacao {
-  position: absolute;
-  top: -130px;
+  background-color: white;
+  position: relative;
+  text-align: center;
   text-align: center;
   border-radius: 10px;
-  padding: 30px;
+  padding: 30px 30px 20px;
   margin: 10px;
   width: 300px;
   box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.404);
