--- a/estilos/OProblema.css
+++ b/estilos/OProblema.css
@@ -6,13 +6,13 @@
 #oproblema {
   background: url(../Assets_Netuno/Container2.png) no-repeat 250px -50px;
   background-size: 700px;
-  background-color: rgb(241, 241, 241);
+  background-color: #f9f9f9;
   height: 130vh;
   width: 100vw;
 }
 
 #texto-oproblema {
-  background-color: rgb(241, 241, 241);
+  background-color: #f9f9f9;
   padding: 10px;
   width: 25vw;
   min-width: 350px;
@@ -26,16 +26,11 @@
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  font-size: 65px;
+  font-size: 60px;
 }
 
 #texto-oproblema h2 {
   padding: 30px 0px;
-  font-size: 25px;
-}
-
-#texto-oproblema p {
-  font-size: 21px;
 }
 
 #bot-oproblema {
@@ -61,6 +56,7 @@
 
 .numero-inv {
   position: absolute;
+  top: -10px;
   left: 150px;
   font-size: 100px;
   color: rgba(0, 0, 0, 0.062);
@@ -79,10 +75,9 @@
 }
 
 .informacao h1 {
-  font-size: 30px;
+  font-size: 25px;
 }
 
 .informacao p {
   margin: 30px;
-  font-size: 20px;
 }
