--- a/estilos/4SuaJornada.css
+++ b/estilos/4SuaJornada.css
@@ -4,7 +4,7 @@
 }
 
 #suajornada {
-  width: 100vw;
+  width: 100%;
   background-color: #f9f9f9;
 }
 
@@ -78,7 +78,7 @@
   margin: auto;
   margin-bottom: 40px;
   padding: 25px 10px;
-  width: 30%;
+  width: 600px;
   text-align: center;
   border-radius: 10px;
   color: white;
@@ -90,4 +90,20 @@
 
 #vector {
   width: 300px;
+}
+
+@media screen and (max-width: 950px) {
+  .ajornada {
+    display: block;
+  }
+
+  .jornada {
+    width: 70%;
+    margin: auto;
+    margin-bottom: 10px;
+  }
+
+  #botao-cadastrar {
+    width: 350px;
+  }
 }
