--- a/estilos/2OProjeto.css
+++ b/estilos/2OProjeto.css
@@ -99,3 +99,14 @@
     transform: translate(-50%);
   }
 }
+
+@media screen and (max-width: 400px) {
+  #mae-oprojeto {
+    height: 90vh;
+  }
+
+  #texto-oprojeto {
+    padding: 10px;
+    top: 20px;
+  }
+}
