--- a/estilos/1style.css
+++ b/estilos/1style.css
@@ -155,6 +155,31 @@ main {
 }
 
 #maeform {
+  position: relative;
+}
+
+#maeform::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  padding: 5px;
+  border-radius: 15px; /*1*/
+  border: 1px solid transparent; /*2*/
+  background: linear-gradient(
+      45deg,
+      #ffffff79,
+      transparent,
+      transparent,
+      #ffffff79
+    )
+    border-box; /*3*/
+  -webkit-mask: /*4*/ linear-gradient(#fff 0 0) padding-box,
+    linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor; /*5'*/
+  mask-composite: exclude; /*5*/
+}
+
+#maeform {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -163,10 +188,10 @@ main {
   margin-top: 90px;
   height: 900px;
   width: 500px;
-  border-radius: 15px;
+  /* border-radius: 15px;
   border: 0.1px solid;
   border-image: linear-gradient(45deg, #ffffff79, #0077cc88, #ffffff79);
-  border-image-slice: 1;
+  border-image-slice: 1; */
 }
 
 #topform {
