--- a/estilos/5Objetivos.css
+++ b/estilos/5Objetivos.css
@@ -3,6 +3,16 @@
   margin: 0px;
 }
 
+#fundo-objetivos {
+  background-image: linear-gradient(
+    to left,
+    #1a7fbd,
+    #32a9f3,
+    #32a9f3,
+    #1a7fbd
+  );
+}
+
 #objetivos {
   width: 100%;
   text-align: center;
