--- a/estilos/1style.css
+++ b/estilos/1style.css
@@ -163,8 +163,8 @@ main {
   position: absolute;
   inset: 0;
   padding: 5px;
-  border-radius: 15px; /*1*/
-  border: 1px solid transparent; /*2*/
+  border-radius: 15px;
+  border: 1px solid transparent;
   background: linear-gradient(
       45deg,
       #ffffff79,
@@ -172,11 +172,10 @@ main {
       transparent,
       #ffffff79
     )
-    border-box; /*3*/
-  -webkit-mask: /*4*/ linear-gradient(#fff 0 0) padding-box,
-    linear-gradient(#fff 0 0);
-  -webkit-mask-composite: xor; /*5'*/
-  mask-composite: exclude; /*5*/
+    border-box;
+  -webkit-mask: linear-gradient(#fff 0 0), padding-box linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
 }
 
 #maeform {
