--- a/estilos/4SuaJornada.css
+++ b/estilos/4SuaJornada.css
@@ -19,7 +19,7 @@
 }
 
 #frasejornada h1 {
-  background-image: linear-gradient(to right, #1a7fbd, #7eceff);
+  background-image: linear-gradient(to right, #1a7fbd, #a4dcff);
   color: black;
   background-clip: text;
   -webkit-background-clip: text;
