--- a/estilos/3OProblema.css
+++ b/estilos/3OProblema.css
@@ -23,7 +23,7 @@
 }
 
 #texto-oproblema h1 {
-  background-image: linear-gradient(to right, #1a7fbd, #7eceff);
+  background-image: linear-gradient(to right, #1a7fbd, #a4dcff);
   color: black;
   background-clip: text;
   -webkit-background-clip: text;
