--- a/estilos/2OProjeto.css
+++ b/estilos/2OProjeto.css
@@ -47,8 +47,8 @@
 @media screen and (max-width: 1125px) {
   #mae-oprojeto {
     position: relative;
-    background: url(../Assets_Netuno/dev.png) no-repeat 10% 50px;
-    background-size: 100%;
+    background: url(../Assets_Netuno/dev.png) no-repeat 10%;
+    background-size: 90%;
   }
 
   #texto-oprojeto {
