--- a/estilos/1style.css
+++ b/estilos/1style.css
@@ -309,6 +309,10 @@ main {
 }
 
 @media screen and (max-width: 1370px) {
+  #bannertopo {
+    height: 110vh;
+  }
+
   .check {
     margin: 25px 0px 0px 10px;
   }
