--- a/estilos/3OProblema.css
+++ b/estilos/3OProblema.css
@@ -198,3 +198,13 @@
     width: 95%;
   }
 }
+
+@media screen and (max-height: 850px) {
+  #oproblema {
+    height: 1100px;
+  }
+
+  #mae-container {
+    margin-top: 80px;
+  }
+}
