--- a/estilos/6Rodape.css
+++ b/estilos/6Rodape.css
@@ -39,10 +39,6 @@ footer ul {
   justify-content: center;
 }
 
-#borda-botao {
-  margin-right: 50px;
-}
-
 #botao-rodape {
   width: 150px;
   text-align: center;
@@ -53,7 +49,7 @@ footer ul {
   text-shadow: 0.3px 0.3px 0.3px black;
   border-radius: 10px;
   padding: 20px 50px;
-  margin: 20px;
+  margin-top: 50px;
   background-color: white;
 }
 
@@ -102,6 +98,10 @@ footer ul {
 
   #imagem-rodape {
     width: 25vw;
+  }
+
+  #botao-rodape {
+    margin: auto;
   }
 
   #rodape {
